--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,69 +50,55 @@ jobs:
         name: qjs_bin
         path: ~/qjs/**/*
 
-#  build_window:
-#    name: Windows
-#    runs-on: windows-2019
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Checkout quickjs
-#      uses: actions/checkout@v2
-#      with:
-#        repository: 'bellard/quickjs'
-#        path: ${{github.workspace}}/quickjs/
-#    - uses: msys2/setup-msys2@v2
-#      with:
-#        update: true
-#        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
-#    - shell: msys2 {0}
-#      run: |
-#        echo "#! /bin/sh" > /mingw64/bin/make
-#        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
-#    - shell: msys2 {0}
-#      run: |
-#        cd quickjs
-#        make libquickjs.a
-#    - name: Prepare
-#      shell: bash
-#      run: |
-#        cd quickjs
-#        mkdir -p ../qjs/Lib/Win64/
-#        cp libquickjs.a ../qjs/Lib/Win64/libquickjs.a
-#    - uses: actions/upload-artifact@v2
-#      with:
-#        name: qjs_bin
-#        path: qjs/**/*
-#
-#  build_window_32:
-#    name: Windows32
-#    runs-on: windows-2019
-#    steps:
-#    - uses: actions/checkout@v2
-#    - name: Checkout quickjs
-#      uses: actions/checkout@v2
-#      with:
-#        repository: 'bellard/quickjs'
-#        path: ${{github.workspace}}/quickjs/
-#    - uses: msys2/setup-msys2@v2
-#      with:
-#        msystem: MINGW32
-#        update: true
-#        install: 'cmake mingw-w64-i686-gcc mingw-w64-i686-make mingw-w64-i686-dlfcn'
-#    - shell: msys2 {0}
-#      run: |
-#        echo "#! /bin/sh" > /mingw32/bin/make
-#        echo "\"mingw32-make\" \"\$@\"" >> /mingw32/bin/make
-#    - shell: msys2 {0}
-#      run: |
-#        cd quickjs
-#        make libquickjs.a
-#    - name: Prepare
-#      shell: bash
-#      run: |
-#        cd quickjs
-#        mkdir -p ../qjs/Lib/Win32/
-#        cp libquickjs.a ../qjs/Lib/Win32/libquickjs.a
-#    - uses: actions/upload-artifact@v2
-#      with:
-#        name: qjs_bin
-#        path: qjs/**/*
+  build_window:
+    name: Windows
+    runs-on: windows-2019
+    steps:
+    - uses: actions/checkout@v2
+    - uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
+    - shell: msys2 {0}
+      run: |
+        echo "#! /bin/sh" > /mingw64/bin/make
+        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
+    - shell: msys2 {0}
+      run: |
+        ./make_win.sh
+    - name: Prepare
+      shell: bash
+      run: |
+        mkdir -p qjs/Lib/Win64/
+        cp build/Release/libquickjs.a qjs/Lib/Win64/libquickjs.a
+    - uses: actions/upload-artifact@v2
+      with:
+        name: qjs_bin
+        path: qjs/**/*
+
+  build_window_32:
+    name: Windows32
+    runs-on: windows-2019
+    steps:
+    - uses: actions/checkout@v2
+    - uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW32
+        update: true
+        install: 'cmake mingw-w64-i686-gcc mingw-w64-i686-make mingw-w64-i686-dlfcn'
+    - shell: msys2 {0}
+      run: |
+        echo "#! /bin/sh" > /mingw32/bin/make
+        echo "\"mingw32-make\" \"\$@\"" >> /mingw32/bin/make
+    - shell: msys2 {0}
+      run: |
+        ./make_win.sh
+    - name: Prepare
+      shell: bash
+      run: |
+        mkdir -p qjs/Lib/Win32/
+        cp build/Release/libquickjs.a qjs/Lib/Win32/libquickjs.a
+    - uses: actions/upload-artifact@v2
+      with:
+        name: qjs_bin
+        path: qjs/**/*
