find / -name libmingwex.a

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,6 +103,7 @@ jobs:
     - shell: msys2 {0}
       run: |
         ./make_win.sh
+        find / -name libmingwex.a
     - name: Prepare
       shell: bash
       run: |
