--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -117,7 +117,7 @@ jobs:
       shell: bash
       run: |
         mkdir -p qjs/Lib/Win32/
-        cp build/quickjs.lib qjs/Lib/Win32/
+        cp win/quickjs.lib qjs/Lib/Win32/
         cp build/msys-quickjs.dll qjs/Lib/Win32/
     - uses: actions/upload-artifact@v2
       with:
