--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
         name: qjs_v8
         path: ~/qjs/**/*
 
-  build_window:
+  build_window_dll:
     name: Windows
     runs-on: windows-2019
     steps:
@@ -75,19 +75,19 @@ jobs:
     - name: Merge Libs
       run: |
         cd win
-        LIB.EXE /OUT:quickjs.lib ..\build\libquickjs.dll.a build\Release\v8qjs.lib
+        LIB.EXE /OUT:quickjs.dll.lib ..\build\libquickjs.dll.a build\Release\v8qjs.lib
     - name: Prepare
       shell: bash
       run: |
         mkdir -p qjs/Lib/Win64/
-        cp win/quickjs.lib qjs/Lib/Win64/
+        cp win/quickjs.dll.lib qjs/Lib/Win64/
         cp build/msys-quickjs.dll qjs/Lib/Win64/
     - uses: actions/upload-artifact@v2
       with:
         name: qjs_v8
         path: qjs/**/*
 
-  build_window_32:
+  build_window_dll32:
     name: Windows32
     runs-on: windows-2019
     steps:
@@ -112,13 +112,40 @@ jobs:
     - name: Merge Libs
       run: |
         cd win
-        LIB.EXE /OUT:quickjs.lib ..\build\libquickjs.dll.a build\Release\v8qjs.lib
+        LIB.EXE /OUT:quickjs.dll.lib ..\build\libquickjs.dll.a build\Release\v8qjs.lib
     - name: Prepare
       shell: bash
       run: |
         mkdir -p qjs/Lib/Win32/
-        cp win/quickjs.lib qjs/Lib/Win32/
+        cp win/quickjs.dll.lib qjs/Lib/Win32/
         cp build/msys-quickjs.dll qjs/Lib/Win32/
+    - uses: actions/upload-artifact@v2
+      with:
+        name: qjs_v8
+        path: qjs/**/*
+        
+  build_window:
+    name: Windows
+    runs-on: windows-2019
+    steps:
+    - uses: actions/checkout@v2
+    - uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
+    - shell: msys2 {0}
+      run: |
+        echo "#! /bin/sh" > /mingw64/bin/make
+        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
+    - shell: msys2 {0}
+      run: |
+        ./make_win_static.sh
+        ls build
+    - name: Prepare
+      shell: bash
+      run: |
+        mkdir -p qjs/Lib/Win64/
+        cp build/libquickjs.a qjs/Lib/Win64/
     - uses: actions/upload-artifact@v2
       with:
         name: qjs_v8
