--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,8 @@ jobs:
         mkdir -p qjs/Lib/Win64/
         cp win/quickjs.dll.lib qjs/Lib/Win64/
         cp build/msys-quickjs.dll qjs/Lib/Win64/
+        cp /mingw64/bin/libgcc_s_seh-1.dll qjs/Lib/Win64/
+        cp /mingw64/bin/libwinpthread-1.dll qjs/Lib/Win64/
     - uses: actions/upload-artifact@v2
       with:
         name: qjs_v8
@@ -119,34 +121,36 @@ jobs:
         mkdir -p qjs/Lib/Win32/
         cp win/quickjs.dll.lib qjs/Lib/Win32/
         cp build/msys-quickjs.dll qjs/Lib/Win32/
+        cp /mingw32/bin/libgcc_s_seh-1.dll qjs/Lib/Win32/
+        cp /mingw32/bin/libwinpthread-1.dll qjs/Lib/Win32/
     - uses: actions/upload-artifact@v2
       with:
         name: qjs_v8
         path: qjs/**/*
         
-  build_window:
-    name: Windows
-    runs-on: windows-2019
-    steps:
-    - uses: actions/checkout@v2
-    - uses: msys2/setup-msys2@v2
-      with:
-        update: true
-        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
-    - shell: msys2 {0}
-      run: |
-        echo "#! /bin/sh" > /mingw64/bin/make
-        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
-    - shell: msys2 {0}
-      run: |
-        ./make_win_static.sh
-        ls build
-    - name: Prepare
-      shell: bash
-      run: |
-        mkdir -p qjs/Lib/Win64/
-        cp build/libquickjs.a qjs/Lib/Win64/
-    - uses: actions/upload-artifact@v2
-      with:
-        name: qjs_v8
-        path: qjs/**/*
+#  build_window:
+#    name: Windows
+#    runs-on: windows-2019
+#    steps:
+#    - uses: actions/checkout@v2
+#    - uses: msys2/setup-msys2@v2
+#      with:
+#        update: true
+#        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
+#    - shell: msys2 {0}
+#      run: |
+#        echo "#! /bin/sh" > /mingw64/bin/make
+#        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
+#    - shell: msys2 {0}
+#      run: |
+#        ./make_win_static.sh
+#        ls build
+#    - name: Prepare
+#      shell: bash
+#      run: |
+#        mkdir -p qjs/Lib/Win64/
+#        cp build/libquickjs.a qjs/Lib/Win64/
+#    - uses: actions/upload-artifact@v2
+#      with:
+#        name: qjs_v8
+#        path: qjs/**/*
