--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,10 +39,10 @@ jobs:
     - name: Install NDK
       run: |
         cd ~
-        wget -O NDK -q https://dl.google.com/android/repository/android-ndk-r15c-linux-x86_64.zip
+        wget -O NDK -q https://dl.google.com/android/repository/android-ndk-r21b-linux-x86_64.zip
         sudo apt install unzip -y
         unzip -q NDK
-        export ANDROID_NDK=~/android-ndk-r15c
+        export ANDROID_NDK=~/android-ndk-r21b
     - name: Run build script
       run: |
         ./make_android.sh
