--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
+    - name: Use Xcode 12.0 for x86
+      run: sudo xcode-select -switch "/Applications/Xcode_12.app"
     - name: Run build script
       run: |
         ./make_osx.sh
@@ -23,6 +25,8 @@ jobs:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
+    - name: Use Xcode 12.0 for x86
+      run: sudo xcode-select -switch "/Applications/Xcode_12.app"
     - name: Run build script
       run: |
         ./make_ios.sh
