--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,6 +93,45 @@ jobs:
       with:
         name: qjs_v8
         path: qjs/**/*
+        
+  build_window_dll_md:
+    name: Windows
+    runs-on: windows-2019
+    steps:
+    - uses: actions/checkout@v2
+    - uses: msys2/setup-msys2@v2
+      with:
+        update: true
+        install: 'cmake mingw-w64-x86_64-gcc mingw-w64-x86_64-make mingw-w64-x86_64-dlfcn'
+    - shell: msys2 {0}
+      run: |
+        echo "#! /bin/sh" > /mingw64/bin/make
+        echo "\"mingw32-make\" \"\$@\"" >> /mingw64/bin/make
+    - shell: msys2 {0}
+      run: |
+        ./make_win.sh
+        ls build
+    - name: Build
+      run: |
+        cd win
+        .\make_win64md.bat
+    - uses: ilammy/msvc-dev-cmd@v1
+    - name: Merge Libs
+      run: |
+        cd win
+        LIB.EXE /OUT:quickjs.dll.lib ..\build\libquickjs.dll.a build\Release\v8qjs.lib
+    - name: Prepare
+      shell: msys2 {0}
+      run: |
+        mkdir -p qjs/Lib/Win64MD/
+        cp win/quickjs.dll.lib qjs/Lib/Win64MD/
+        cp build/msys-quickjs.dll qjs/Lib/Win64MD/
+        cp /mingw64/bin/libgcc_s_seh-1.dll qjs/Lib/Win64MD/
+        cp /mingw64/bin/libwinpthread-1.dll qjs/Lib/Win64MD/
+    - uses: actions/upload-artifact@v2
+      with:
+        name: qjs_v8
+        path: qjs/**/*
 
   build_window_dll32:
     name: Windows32
