--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,7 +95,7 @@ jobs:
         path: qjs/**/*
         
   build_window_dll_md:
-    name: Windows
+    name: Windows MD
     runs-on: windows-2019
     steps:
     - uses: actions/checkout@v2
