--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,6 +86,8 @@ jobs:
       run: |
         mkdir -p qjs/Lib/Win64/
         cp win/quickjs.dll.lib qjs/Lib/Win64/
+        cp build/libquickjs.dll.a qjs/Lib/Win64/
+        cp win/build/Release/v8qjs.lib qjs/Lib/Win64/
         cp build/msys-quickjs.dll qjs/Lib/Win64/
         cp /mingw64/bin/libgcc_s_seh-1.dll qjs/Lib/Win64/
         cp /mingw64/bin/libwinpthread-1.dll qjs/Lib/Win64/
